--- a/app.css
+++ b/app.css
@@ -1,6 +1,10 @@
 body{
     background-color:red;
     font-family: 'Spectral SC', serif;
+    Margin-top: 0px;
+    Margin-right: 0px;
+    Margin-bottom: 0px;
+    Margin-left: 0px;
 }
 h1{
     
